packages/fortifier-macros/tests/validations/email/invalid_allow_domain_literal_fail.stderr
error: expected boolean literal
 --> tests/validations/email/invalid_allow_domain_literal_fail.rs:5:45
  |
5 |     #[validate(email(allow_domain_literal = 1))]
  |                                             ^
