packages/fortifier-macros/tests/validations/email/invalid_allow_domain_literal_fail.rs
use fortifier::Validate;

#[derive(Validate)]
struct EmailData<'a> {
    #[validate(email(allow_domain_literal = 1))]
    value: &'a str,
}

fn main() {}
